# yubioath-flutter

./: pubspec.yaml
.github/workflows/: android.yml  check-strings.yml  codeql-analysis.yml  linux-arm64.yml  linux.yml  macos.yml  windows.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  collect_licenses.gradle  signing.gradle
android/app/src/main/kotlin/com/yubico/authenticator/: MainActivity.kt
android/app/src/main/kotlin/com/yubico/authenticator/logging/: FlutterLog.kt
android/flutter_plugins/qrscanner_zxing/android/: build.gradle
android/flutter_plugins/qrscanner_zxing/android/gradle/wrapper/: gradle-wrapper.properties
android/flutter_plugins/qrscanner_zxing/example/lib/: main.dart
android/flutter_plugins/qrscanner_zxing/lib/: qrscanner_zxing_view.dart
android/gradle/wrapper/: gradle-wrapper.properties
helper/: pyproject.toml
lib/android/qr_scanner/: qr_scanner_overlay_view.dart  qr_scanner_view.dart
lib/app/views/: app_page.dart  fs_dialog.dart  navigation.dart
lib/fido/views/: credential_dialog.dart  fingerprint_dialog.dart
lib/home/views/: home_screen.dart
lib/l10n/: app_cs.arb  app_de.arb  app_el.arb  app_en.arb  app_es.arb  app_fr.arb  app_hu.arb  app_it.arb  app_ja.arb  app_nl.arb  app_pl.arb  app_pt.arb  app_ru.arb  app_sk.arb  app_sv.arb  app_th.arb  app_tr.arb  app_uk.arb  app_vi.arb  app_zh.arb  app_zh_TW.arb
lib/oath/views/: account_dialog.dart
lib/otp/views/: slot_dialog.dart
lib/piv/views/: slot_dialog.dart
(+4 files in other folders)
