[project]
name = "authenticator-helper"
version = "0.1.0"
description = "Yubico Authenticator Helper"
authors = [{ name = "Dain Nilsson", email = "dain@yubico.com" }]
requires-python = ">=3.10, <4"
dependencies = [
  "yubikey-manager (>=5.9.1, <6)",
  "fido2 (>=2.2.0, <3)",
  "mss (>=10.2.0, <11)",
  "pillow (>=12.2.0, <13)",
  "zxing-cpp (>=3.0.0, <4)",
  "pyscard (>=2.3.1, <3)",
]

[dependency-groups]
dev = [
  "pyinstaller (>=6.17, <7)",
  "mypy (>=1.19.0, <2)",
  "delocate (>=0.13, <0.14) ; sys_platform == 'darwin'",
]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{ include = "helper" }]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = "."
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["smartcard.*", "zxingcpp"]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["I", "S"]
exclude = ["tests/*"]

[tool.pyright]
venvPath = "./helper/"
venv = ".venv"
